# ai-finance-researcher

./: CLAUDE.new.md  README.md  STEP_BY_STEP.md  package.json  pnpm-lock.yaml  pytest.ini
.claude/: settings.local.json
backend/: .env.example  README.md  migration_preview.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 157a7db1f8b8_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py
backend/app/assistant/: __init__.py  agent.py  deps.py  instructions.md  outputs.py
backend/app/auth/: dependencies.py
backend/app/chat/: messages.py  orchestrator.py  streaming.py
backend/app/database/: __init__.py  chats.py  documents.py  models.py  profiles.py  supabase.py
backend/app/grounding/: __init__.py  validator.py
backend/app/retrieval/: __init__.py  fusion.py  queries.py  retriever.py
backend/ingest/: __init__.py  chunking.py  convert_html_to_markdown.py  embeddings.py  filing.py  manifest.py  run.py
backend/tests/api/: test_chat.py
backend/tests/chat/: test_messages.py  test_orchestrator.py  test_streaming.py
backend/tests/database/: test_chats.py  test_citations.py  test_documents.py  test_profiles.py
backend/tests/grounding/: test_validator.py
backend/tests/ingest/: test_chunking.py  test_embeddings.py  test_filing.py  test_manifest.py
backend/tests/retrieval/: test_chunk_lookups.py  test_fusion.py  test_queries.py  test_retriever.py
data/: README.md  convert_html_to_markdown.py
docs/: phase-7-retrieval-flow.mmd  phase_9.md  todo.md
frontend/: package.json  pnpm-lock.yaml  (+1 more)
(+11 files in other folders)
