[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "ai-finance-researcher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.0.0",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]

[tool.uv]
#add-bounds = "exact"
exclude-newer = "2026-06-24T00:00:00Z"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires live external services (Supabase, OpenAI); excluded by default",
]

[dependency-groups]
dev = [
    "docling>=2.106.0",
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
